# basic-ml-algo

./: README.md  pyproject.toml
K-means Clustering/: K-means Clustering.ipynb  README.md
Linear Regression/: Linear Regression.ipynb  README.md  data.csv
Logistic Regression (Cancer Classification)/: Logistic Regression.ipynb  README.md
Logistic Regression in Neural Network/: README.md
Naïve Bayes Classifier(Sentiment analysis)/: Naïve Bayes.ipynb  README.md
deep_learning/logistic_regression_neural_net/: Neural Net (Logistic Regression).html  Neural Net (Logistic Regression).ipynb  Neural Net (Logistic Regression).qmd
supervised/knn/: KNN with Iris.html  KNN with Iris.ipynb  KNN with Iris.qmd  README.md
supervised/linear_regression/: Linear Regression.html  Linear Regression.qmd
supervised/linear_regression/Visualize Linear Regression/: Linear Regression Visualize.html  Linear Regression Visualize.ipynb  Linear Regression Visualize.qmd
supervised/logistic_regression_cancer_classification/: Logistic Regression.html  Logistic Regression.ipynb  Logistic Regression.qmd
supervised/naive_bayes_classifier_sentiment_analysis/: Naïve Bayes.html  Naïve Bayes.qmd  README.md
unsupervised/kmeans_clustering/: K-means Clustering.html  K-means Clustering.ipynb  K-means Clustering.qmd
