[tool.poetry]
name = "basic-ml-algo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "basic_ml_algo"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
matplotlib = "^3.7.2"
plotly = "^5.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
